tests/ui/02-no-event-type.stderr
error: no event type attribute found, add `#[ruma_events(type = "any.room.event")]` below the event content derive
 --> $DIR/02-no-event-type.rs:4:44
  |
4 | #[derive(Clone, Debug, Serialize, FromRaw, StateEventContent)]
  |                                            ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
